<resources>
    <string name="pin_code_step_enable_confirm">Confirmer votre code PIN</string>
    <string name="pin_code_step_create">Créer votre code PIN</string>
    <string name="require_permission_location">Localisation</string>
    <string name="dialog_permission_request_title">Permission requise</string>
    <string name="dialog_permission_deny_button">Accepter</string>
    <string name="dialog_permission_allow_button">Refuser</string>
    <string name="dialog_permission_single_request_content" formatted="false">%2$s demande la permission pour accéder \'%1$s\'. Merci d\'autoriser \'%1$s\' dans  Settings/Applications/%2$s pour continuer.</string>
    <string name="dialog_permissions_two_request_content" formatted="false">%3$s demande la permission pour accéder \'% \'%1$s\' and \'%2$s\'. Merci d\'autoriser \'%1$s\' et \'%2$s\' dans Settings/Applications/%3$s pour continuer.</string>
    <string name="require_permission_stockage">Stockage des données</string>
    <string name="auth_client_ID">p3arcAOuch2WQX8j5zLncbndPLkq9Yb3</string>
    <string name="auth_client_DOMAIN">mymoneymobile.eu.auth0.com</string>
    <string name="auth_scope">openid roles user_id email profil</string>
    <string name="data_base">PreprodDB</string>
    <string name="app_version">3.0.0</string>
    <string name="buck_end_version">2.4.0</string>
    <string name="login_failed_title">My Money Mobile</string>
    <string name="login_failed_message">Adresse mail ou mot de passe non valide!</string>
    <string name="fr_text_saisir_mail" translatable="false">Veuillez saisir votre adresse mail</string>
    <string name="email_field" translatable="false">Adresse mail</string>
    <string name="app_name" translatable="false">DIOOL</string>
    <string name="login" translatable="false">Se Connecter</string>
    <string name="login_passwordles" translatable="false">Se Connecter via SMS</string>
    <string name="fr_text_username" translatable="false">Identifiant</string>
    <string name="fr_text_password" translatable="false">Mot De Passe</string>
    <string name="airtimemenu" translatable="false">Recharges</string>
    <string name="mobilemoneymenu" translatable="false">Mobile Money</string>
    <string name="merchantdepositmenu" translatable="false">Dépôts Marchand</string>
    <string name="Orange" translatable="false">Orange</string>
    <string name="MTN" translatable="false">MTN</string>
    <string name="NextTel" translatable="false">Nexttel</string>
    <string name="number" translatable="false">Numéro</string>
    <string name="identifiant" translatable="false">Identifiant</string>
    <string name="number_hint" translatable="false"><i>6XXXXXXXX</i></string>
    <string name="amount" translatable="false">Montant</string>
    <string name="send" translatable="false">Envoyer</string>
    <string name="cancel" translatable="false">Annuler</string>
    <string name="ok" translatable="false">OK</string>
    <string name="network_menu" translatable="false">Mon réseau d\'agents</string>
    <string name="list_view_map" translatable="false">Mode liste</string>
    <string name="map_view_map" translatable="false">Mode Map</string>
    <string name="paymentmenu" translatable="false">Encaissement</string>
    <string name="addfundsmenu" translatable="false">Add Funds</string>
    <string name="witdrawfundsmenu" translatable="false">Withdraw Funds</string>
    <string name="transfertdioolmenu" translatable="false">Transfert de solde</string>
    <string name="cashinmenu" translatable="false">Dépôts</string>
    <string name="cashinOperation" translatable="false">Dépôt</string>
    <string name="cashoutmenu" translatable="false">Retraits</string>
    <string name="cashoutOperation" translatable="false">Retrait</string>
    <string name="select_service" translatable="false">Sélectionnez un Service</string>
    <string name="solde_depot" translatable="false">"<b>Solde : </b>"</string>
    <string name="solde_rev" translatable="false"><b>"Revenu : "</b></string>
    <string name="loyalty" translatable="false"><b>"Points : "</b></string>
    <string name="loyalty_unit" translatable="false">points </string>
    <string name="redeem" translatable="false">Récupérer</string>
    <string name="settings" translatable="false">Paramètres</string>
    <string name="changepassword" translatable="false">Changer le Mot de Passe</string>
    <string name="fr_old_password" translatable="false">Ancien Mot de Passe</string>
    <string name="fr_new_password" translatable="false">Nouveau Mot de Passe</string>
    <string name="fr_confirm_password" translatable="false">Confirmer Mot de Passe</string>
    <string name="validate" translatable="false">Valider</string>
    <string name="logout" translatable="false">Se Déconnecter</string>
    <string name="refresh" translatable="false">Refresh Balance</string>
    <string name="share" translatable="false">Share application</string>
    <string name="map" translatable="false">Map</string>
    <string name="add_network" translatable="false">Ajouter un marchand</string>
    <string name="add_account" translatable="false">Ajouter Compte</string>
    <string name="send_file" translatable="false">Send File</string>
    <string name="save" translatable="false">Save</string>
    <string name="print" translatable="false">Print</string>
    <string name="calendar" translatable="false">Calendar</string>
    <string name="validation_dialog_text">Entrez la partie XXXXXX de la reference CO.YYMMDD.hhmm.XXXXXX du client</string>
    <string name="successfull_operation">Opération effectuée avec succès</string>
    <string name="waiting_cashout_ocm">Le client doit composer #150# pour valider la demande </string>
    <string name="waiting_cashout_mtnc">Le client doit composer *126*1# pour valider la demande</string>
    <string name="failed_operation">opération échouée</string>
    <string name="failed_connection">La connexion a échoué</string>
    <string name="failed_connection_title">Problème de connexion</string>
    <string name="title_activity_signup">Signup</string>
    <string name="cgu_check_text">J\'accepte les termes et conditions </string>
    <string name="show_password_check_text">Afficher le mot de passe</string>
    <string name="cgu_check_validation_text">Il faut accepter les termes et conditions</string>
    <string name="cgu_link_text">Termes et conditions</string>
    <string name="login_hint">
      <i>email</i>
    </string>
    <string name="number_prefix">237</string>
    <string name="subdistributor">Sous Distributeur: </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">S\'enregistrer</string>
    <string name="login_aut">Se connecter via Auth0</string>
    <string name="signup_title_customer">Enregistrement: Usage personnel </string>
    <string name="signup_title_merchant">Enregistrement: Usage commercial </string>
    <string name="airtimemenu_customer">Transfert de Crédit</string>
    <string name="cashoutmenu_customer">Charger Mon Compte</string>
    <string name="cashinmenu_customer">Transfert d\'Argent</string>
    <string name="profile">Profile</string>
    <string name="map_action_title">Cash Points</string>
    <string name="cashpointsmenu_customer">Les Cash Points autour de Moi</string>
    <string name="currency_name">XAF</string>
    <string name="revenue_customer"><b>Point de fidélité:</b> 0 points</string>
    <string name="value_customer">Trouvez le cash point le plus proche et gagnez des points de fidélité lors de vos transactions</string>
    <string name="value_merchant">Combinez recharges et mobile money pour augmenter vos revenus</string>
    <string name="register_button">Register</string>
    <string name="forgotpassword"><a href="https://emonize.mymoneytop.com/client/#/resetpassword"> Mot de passe oublié ?</a></string>
    <string name="title_activity_forgotpassword">Mot de passe oublié</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_transactions">Transactions</string>
    <string name="title_gps_dialog">Map</string>
    <string name="text_gps_dialog">Map</string>
    <string name="text_webservice_problem_title">Probléme</string>
    <string name="text_webservice_problem_content">Probléme lors du chargement du résultat</string>
    <string name="netverify_actionbar_title_country">Pays d\'émission </string>
    <string name="netverify_choose_country">Choisir le pays d\'émission</string>
    <string name="netverify_button_select_another_country">Choisir un autre pays</string>
    <string name="netverify_actionbar_title_documenttype">Type de document</string>
    <string name="netverify_milestone_upload">Upload</string>
    <string name="netverify_milestone_finish">Terminer</string>
    <string name="netverify_documenttype_passport">Passeport</string>
    <string name="netverify_documenttype_visa">Visa</string>
    <string name="netverify_documenttype_idcard">Carte d\'identité</string>
    <string name="netverify_documenttype_driverlicense">Permis de conduire</string>
    <string name="netverify_front">Recto</string>
    <string name="netverify_take_photo_front">Appuyez pour prendre ou utiliser une photo recto du document.</string>
    <string name="netverify_change_photo_front">Appuyez pour changer la photo recto du document.</string>
    <string name="netverify_back">Verso</string>
    <string name="netverify_take_photo_back">Appuyez pour prendre ou utiliser une photo verso du document.</string>
    <string name="netverify_change_photo_back">Appuyez pour changer la photo verso du document.</string>
    <string name="netverify_infobar_issuer_country">Confirmez ou sélectionnez le pays d\'émission de la carte d\'identité que vous voulez vérifier</string>
    <string name="netverify_infobar_extraction_in_progress">Extraction en cours ...</string>
    <string name="netverify_infobar_document_type">Sélectionnez le type d\'ID que vous souhaitez numériser</string>
    <string name="netverify_infobar_document_variant">Sélectionnez le style d\'ID que vous souhaitez numériser</string>
    <string name="netverify_infobar_help_button">Aide</string>
    <string name="netverify_actionbar_title_scan">Photo de votre carte</string>
    <string name="netverify_actionbar_title_scan_face">Votre photo</string>
    <string name="netverify_infobar_camera_view_barcode_driverlicense">Scan the bar code on the back</string>
    <string name="netverify_infobar_camera_view_passport">Place passport within the brackets</string>
    <string name="netverify_infobar_camera_view_driverlicense">Place driver license within brackets</string>
    <string name="netverify_infobar_camera_view_idcard">Place identity card within brackets</string>
    <string name="netverify_infobar_camera_view_manual_front">Please scan the front of your document</string>
    <string name="netverify_infobar_camera_view_manual_back">Please scan the back of your document</string>
    <string name="netverify_use_front_side_of_card">RECTO DE VOTRE CARTE</string>
    <string name="netverify_use_back_side_of_card">VERSO DE VOTRE CARTE</string>
    <string name="netverify_overlay_liveness_advice">Déplacez vos yeux ou cligner</string>
    <string name="netverify_overlay_passport">PASSEPORT</string>
    <string name="netverify_overlay_visa">VISA</string>
    <string name="history_text_merchant">Relevé des transactions </string>
    <string name="history_redeem_text_merchant">Relevé des récupérations </string>
    <string name="quote_request_text_merchant">Quote Request </string>
    <string name="navigation_view_item_1">Acceuil</string>
    <string name="navigation_view_item_2">Profile</string>
    <string name="navigation_view_item_3">Chercher boutique</string>
    <string name="navigation_view_item_4">Mon réseau d\'agents</string>
    <string name="navigation_view_item_5">Relevé des transactions</string>
</resources>