<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullscreen_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activities.AuthActivity">

    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        android:layout_width="240dip"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="140dip"
            android:layout_height="150dip"
            android:layout_gravity="top|center_horizontal"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginTop="10dip"
            android:text="@string/fr_text_username" />

        <EditText
            android:id="@+id/login_email_field"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_marginTop="10dip"
            android:hint="@string/login_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginTop="10dip"
            android:text="@string/fr_text_password" />

        <EditText
            android:id="@+id/login_password_field"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/messageLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginTop="10dip"
            android:textColor="@color/nexttel" />

        <Button
            android:id="@+id/login_action_button"
            android:layout_width="240dip"
            android:layout_height="0dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dip"
            android:layout_weight="1"
            android:background="@drawable/btnmauve"
            android:textStyle="normal|bold|italic"
            android:text="@string/login"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/login_passwordless_action_button"
            android:layout_width="240dip"
            android:layout_height="0dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dip"
            android:layout_weight="1"
            android:background="@drawable/btnblueform"
            android:text="@string/login_passwordles"
            android:visibility="gone"
            android:textColor="@color/white" />



        <TextView
            android:id="@+id/text_share_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Partager le lien d'Inscription"
            android:textColor="@color/darker_blue"
            android:textStyle="bold"
            android:layout_marginLeft="5dip"
            android:layout_marginTop="20dip"
            android:clickable="true"
            android:linksClickable="true" />

        <TextView
            android:id="@+id/text_mot_passe_oublie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/forgotpassword"
            android:layout_marginLeft="5dip"
            android:layout_marginTop="10dip"
            android:clickable="true"
            android:linksClickable="true" />
    </LinearLayout>

</ScrollView>