<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullscreen_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="10dp"
    tools:context=".activities.ResetPasswordActivity">

    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        android:layout_width="240dip"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="140dip"
            android:layout_height="180dip"
            android:layout_gravity="top|center_horizontal"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/adresse_mail_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dip"
            android:text="@string/fr_text_saisir_mail" />

        <EditText
            android:id="@+id/adresse_mail_field"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_marginTop="10dip"
            android:hint="@string/email_field"
            android:inputType="textEmailAddress" />


        <Button
            android:id="@+id/login_action_button"
            android:layout_width="240dip"
            android:layout_height="0dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dip"
            android:layout_weight="1"
            android:background="@drawable/btnmauve"
            android:text="@string/validate"
            android:textColor="@color/white" />


    </LinearLayout>

</ScrollView>